syntax = "proto3";

package shortener;

option go_package = "grpc-shortener/proto";

message AddURLRequest {
  string url = 1;
}

message AddURLResponse {
  string result = 1;
  string error = 2; // ошибка
}

message BatchUrlRequest {
  string correlation_ID = 1;
  string original_url = 2;
}

message BatchUrlResponse {
  string correlation_ID = 1;
  string short_url = 2;
}

message AddBatchURLRequest {
  repeated BatchUrlRequest urls = 1;
}

message AddBatchURLResponse {
  repeated BatchUrlResponse urls = 1;
  string error = 2; // ошибка
}

message GetURLRequest {
  string hash = 1;
}
message GetURLResponse {
  string result = 1;
  string error = 2; // ошибка
}

message StatsRequest {}
message StatsResponse {
  int64 urls = 1;
  int64 users = 2;
  string error = 3;
}

service Shortener {
  rpc AddURL(AddURLRequest) returns (AddURLResponse);
  rpc AddBatchURL(AddBatchURLRequest) returns (AddBatchURLResponse);
  rpc GetURL(GetURLRequest) returns (GetURLResponse);
  rpc Stats(StatsRequest) returns (StatsResponse);
}